Edit color displayed when cursor hovers

--- a/res/screen.css
+++ b/res/screen.css
@@ -360,7 +360,7 @@ a.post-excerpt {
   a.post-excerpt:hover {
     color:black;
     /*background-color:#444;*/
-    background-color:#fff933;
+    background-color:#6F6F6F;
     text-decoration:none;
   }
 
