--- a/res/screen.css
+++ b/res/screen.css
@@ -355,15 +355,42 @@ a.post-excerpt {
       a.post-excerpt.photo:hover div.padded-content {
         opacity:0.9;
       }
+       a.post-excerpt:hover div.padded-content {
+        opacity:0.9;
+      }
   }
 
-  a.post-excerpt:hover {
+  .padded-content::before {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: #37474f;
+	z-index: -1;
+	opacity: 0;
+	-webkit-transform: scale3d(0.7, 1, 1);
+	transform: scale3d(0.7, 1, 1);
+	-webkit-transition: -webkit-transform 0.4s, opacity 0.4s;
+	transition: transform 0.4s, opacity 0.4s;
+	-webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
+	transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
+}
+
+.padded-content:hover {
     color:black;
-    /*background-color:#444;*/
-    background-color:#6F6F6F;
+	border-color: #37474f;
+} 
+a.post-excerpt:hover {
     text-decoration:none;
   }
 
+.padded-content:hover::before {
+	opacity: 1;
+	-webkit-transform: translate3d(0, 0, 0);
+	transform: translate3d(0, 0, 0);
+}
   a.post-excerpt div.title {
     font-family:'Roboto Condensed', sans-serif;
     font-size:18px;
