--- a/res/screen.css
+++ b/res/screen.css
@@ -367,7 +367,7 @@ a.post-excerpt {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background: #37474f;
+	background: #6F6F6F;
 	z-index: -1;
 	opacity: 0;
 	-webkit-transform: scale3d(0.7, 1, 1);
