--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
       <meta name="og:description" content="{{ content | strip_html | truncatewords: 25 }}">
       {% endif %}
     {% else %}
-      <meta name="description" content="Ramblings by Rasmus Andersson -- a Swedish designer with a passion for technology">
+      <meta name="description" content="Twofourths's blog">
     {% endif %}
     {% if page.og_image_url %}
     <meta property="og:image" content="{{ page.og_image_url }}">
@@ -41,10 +41,10 @@
     <meta property="og:image" content="{{ page.photo_url }}">
     {% endif %}
     {% endif %}
-    <meta property="og:url" content="http://rsms.me{{ page.url | remove_first:'index.html' }}">
-    <meta property="og:site_name" content="rsms.me">
+    <meta property="og:url" content="https://twofourths.me{{ page.url | remove_first:'index.html' }}">
+    <meta property="og:site_name" content="twofourths.me">
     <meta property="og:type" content="article">
-    <meta property="og:locale" content="en_GB" />
+    <meta property="og:locale" content="zh_CN" />
     {% if page.date %}
     <meta property="article:published_time" content="{{ page.date | date: "%Y-%m-%d" }}">
     {% endif %}
@@ -70,7 +70,7 @@
     */</script>
     <div id="fb-root"></div><script></script-->
     <header>
-      <h1 class="logo" onclick="document.location.href='/';"><a href="/"><img src="/res/signature-2-2.png" width="160" height="50" alt="Signature"></a></h1>
+      <h1 class="logo" onclick="document.location.href='/';"><a href="/"><img src="/res/signature-logo.png" width="160" height="50" alt="Signature"></a></h1>
       <ul class="navigation">
         <li><a href="/photos/"{% if page.url contains "/photos/" %}class="active"{% endif %} title="A selection of recent photography">Photography</a></li>
         <li><a href="/projects/"{% if page.url contains "/projects/" %}class="active"{% endif %} title="Projects I am or was involved in">Projects</a></li>
@@ -81,13 +81,6 @@
     <!--div class="wrapper content"-->
       {{ content }}
     <!--/div-->
-    
-    {% if page.fb_comments or page.comments %}
-    <!--div class="content sub">
-      <h2 id="comments">Comments</h2>
-      <div class="fb-comments" data-href="http://rsms.me{{ page.url }}" data-num-posts="{{ page.fb_comments }}" data-width="550" data-font="arial"></div>
-    </div-->
-    {% endif %}
     
     {% if paginator.page %}
     <div id="paginator" class="content">
