--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,7 +70,7 @@
     */</script>
     <div id="fb-root"></div><script></script-->
     <header>
-      <h1 class="logo" onclick="document.location.href='/';"><a href="/"><img src="/res/signature-logo.jpg" width="160" height="50" alt="Signature"></a></h1>
+      <h1 class="logo" onclick="document.location.href='/';"><a href="/"><img src="/res/signature-logo.png" width="160" height="50" alt="Signature"></a></h1>
       <ul class="navigation">
         <li><a href="/photos/"{% if page.url contains "/photos/" %}class="active"{% endif %} title="A selection of recent photography">Photography</a></li>
         <li><a href="/projects/"{% if page.url contains "/projects/" %}class="active"{% endif %} title="Projects I am or was involved in">Projects</a></li>
